fix bugs ketinggalan

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
   <div class="close big" onclick="abort(event)"></div></div>
   <progress id="progressBar" value="0" max="100" style="width:75%; margin-top: 10px"></progress>
   <h3 id="status"></h3>
+  <h5 id="total"></h5>
   <p id="loaded_n_total"></p>
 </form>
 </div>
